# AWS-icon-recognition

./: LICENSE  README.md  package-lock.json  package.json  pyproject.toml
api/: interface.py
data_preprocessing/: preprocessing.py
model/: __init__.py  dataloader.py  predict.py  train.py
recognition-front/: package-lock.json  package.json
recognition-front/src/: App.tsx  ImageUploader.tsx
