[tool.poetry]
name = "aws-icon-recognition"
version = "0.1.0"
description = ""
authors = ["boheng <c451735634@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
torchvision = "^0.16.2"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
